fix error page not showing full message

--- a/public/stylesheets/404.css
+++ b/public/stylesheets/404.css
@@ -7,7 +7,7 @@ body, html {
     align-items: center;
 }
 
-.notfounderror {
+.error {
     justify-content: center;
     align-items: center;
     display: table-cell;
@@ -15,7 +15,7 @@ body, html {
     text-align: center;
 }
 
-.notfounderror h1 {
+.error h1 {
     font: 90px 'Roboto Slab', serif, monospace;
     color: #F5F5DC;
     font-weight: lighter;
